<resources>
    <string name="app_name">BrainMaster</string>
    <string name="entrar">ENTRAR</string>
    <string name="registro">REGISTRARTE</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">Email</string>
    <string name="fN">Fecha de nacimiento</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="botones">Botones</string>
    <string name="palabras">Palabras</string>
    <string name="idiomas">Elige el idioma:</string>
    <string name="tema">Tema:</string>
    <string-array name="temas">
        <item>1 Clásico</item>
        <item>2 Verano</item>
        <item>3 Punk</item>
    </string-array>
    <string-array name="temasNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="idiomas">
        <item>English</item>
        <item>Español</item>
        <item>Euskera</item>
    </string-array>
    <string-array name="idiomasVal">
        <item>en</item>
        <item>es</item>
        <item>eu</item>
    </string-array>
    <string name="notificación">Notificaciones Diarias:</string>
    <string name="guardar">GUARDAR</string>
    <string name="activar">ACTIVAR</string>
    <string name="compartir">Compartir:</string>
    <string name="compartirContenido">Descarga ahora BrainMaster para entrenar a tu cerebro.</string>
    <string name="noti1Titulo">Ha actualizado la configuración</string>
    <string name="noti1Contenido">Se han guardado los cambios</string>
    <string name="noti2Titulo">Es la hora de practicar!</string>
    <string name="noti2Contenido">Entrenar el cerebro es super importante.</string>
    <string name="ranking">Ranking</string>
    <string name="puntuacion">Puntuación:</string>
    <string name="visto">VISTO</string>
    <string name="nuevo">NUEVO</string>
    <string name="configuracion">Configuración</string>
    <string name="perder">Partida Finalizada!</string>
    <string name="salir">Seguro que desea salir?</string>
    <string name="salirM">Si sales no se guardará la partida</string>
    <string name="reglas">Reglas</string>
    <string name="reglasMB">Se mostrará una secuencia de botones iluminados. Repite dicha secuencia clickando los botones de la pantalla y pulsa OK.</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="reglasMP">Clicka \"Nuevo\" si la palabra que aparece en pantalla no la has visto antes en esta partida. Clicka \"Visto\" en caso contrario.</string>
    <string name="nombreRanking">Introduce un nombre para que aparezca en el ranking:</string>
    <string name="errorLogin">Usuario o contraseña incorrectos</string>
    <string name="okLogin">Login correcto</string>
    <string name="errorCampos">No has introducido todos los campos</string>
    <string name="errorRegistro">El nombre de usuario no está disponible</string>
    <string name="okRegistro">Usuario registrado</string>
    <string name="error">ERROR</string>
    <string name="pref">Preferencias</string>
    <string name="perfil">Perfil</string>
    <string name="otros">Otros</string>
    <string name="contactos">Contactos</string>
    <string name="editar">EDITAR</string>
    <string name="mapa">Mapa</string>
    <string name="añadir">AÑADIR</string>
    <string name="registrado">Registrado</string>
    <string name="noRegistrado">No registrado</string>
    <string name="errorConexion">ERROR DE CONEXIÓN</string>
</resources>