<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/configuracion">
        <menu>
            <item
                android:id="@+id/preferencias"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/pref" />
            <item
                android:id="@+id/perfil"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/perfil" />
        </menu>
    </item>
    <item android:title="@string/otros">
        <menu>
            <item
                android:id="@+id/compartir"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/compartir" />
            <item
                android:id="@+id/contactos"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/contactos" />
        </menu>
    </item>
</menu>