<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="cat_config"
        app:title="@string/configuracion">
        <ListPreference
            app:dialogTitle="@string/idiomas"
            app:entries="@array/idiomas"
            app:entryValues="@array/idiomasVal"
            app:key="idiomapref"
            app:title="@string/idiomas"
            app:defaultValue="es"/>
        <ListPreference
            app:dialogTitle="@string/tema"
            app:entries="@array/temas"
            app:entryValues="@array/temasNum"
            app:key="temapref"
            app:title="@string/tema"
            app:defaultValue="1"/>
        <SwitchPreferenceCompat
            app:key="switch"
            app:title="@string/notificación"
            app:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>