<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/nombreEText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreEEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apellidoEText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="160dp"
        android:text="@string/apellido"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apellidoEEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usuarioEText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="260dp"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usuarioEEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contraEText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="360dp"
        android:text="@string/contraseña"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contraEEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="390dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailEText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="460dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="490dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--
         * Basado en el código extraído de Stack Overflow
         * Pregunta: https://stackoverflow.com/questions/22105775/imageview-in-circular-through-xml
         * Autor: https://stackoverflow.com/users/9193372/syscall
         * Modificado por Ane García para traducir varios términos y adaptarlo a la aplicación
    -->
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="12dp"
        android:id="@+id/cardView"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/fotoDePerfilE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ranking"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>